Disambiguate & as an expression or pattern operator.